--- a/my-first-webpage/css/style.css
+++ b/my-first-webpage/css/style.css
@@ -28,6 +28,7 @@ header{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    flex-wrap: wrap-reverse;
     align-content: center;
     padding: 1rem .3rem;
 }
@@ -37,27 +38,60 @@ nav ul{
 }
 
 .name {
+    line-height: .5;
+    text-align: center;
+    width: 100%;
+}
+
+.name a{
+    font-family: 'Paytone One', sans-serif;
     font-size: 1rem;
-    font-weight: 700;
+    font-weight: 400;
     margin: 0;
-    letter-spacing: .6px;
-    flex-shrink: 1;
-    line-height: 1;
+    letter-spacing: 1px;
+    line-height: 0;
+    flex: 1;
     color: #fff;
     margin: 1rem;
+    text-align: center;
+    width: 100%;
+}
+
+.name a span{
+    text-align: center;
+    margin-left: 2rem;
 }
 
 #navSelect{
+    width: 100%;
+    color: #5a5a5a;
+    padding: .48rem;
+    border: 0;
+    background: transparent;
+    line-height: 1;
+    -webkit-appearance: none;
+}
+ 
+.select_container{
     width: 90%;
-    margin: 1rem;
-    color: #7e7e7e;
+    height: 2%;
+    margin: 1rem auto;
+   background: url('../svg/caret5.svg') no-repeat right #fff;
+    background-size: 10px 10px;
+    background-position: 98% 50%;
+}
+
+#navSelect:focus{
+    border: 0;
+    box-shadow: 0;
+    outline: none;
 }
 
 /************ SLIDER ************/
 
 #slide-Panel{
     width: 100%;
-    height: 280px;
+    height: 40%;
     overflow: hidden;
 }
 
@@ -78,14 +112,18 @@ nav ul{
     top: 0;
     left: 100%;
     z-index: 10;
-    background: #000;
-    background-repeat: no-repeat;
-    background-position:50% 50%;
-    background-size: cover;
     padding: 2em 2em;
     color: white;
     font-size: 1em;
 } 
+
+.slide::before{
+    background: #fff;
+    background-repeat: no-repeat;
+    background-position:50% 50%;
+    background-size: cover;
+}
+
 
 .slide a {
     background: #0FCABF;
@@ -95,32 +133,56 @@ nav ul{
     margin: 1rem;
 }
 
-[type="radio"]{
+.wrap input[type="radio"]{
     position: absolute;
     z-index: 200;
     bottom: 10%;
-    left: 45%;
+    left: auto;
+    right: auto;
 }
 
+.wrap input[type="radio"]:nth-of-type(1){
+    margin-left: -1.2rem;
+}
+    
 #slider-2-trigger{
-    margin-left: 1.2em;
+  margin-left: .4rem;
 }
 
-.slide-one{
-    background-image: url('https://snap-photos.s3.amazonaws.com/img-thumbs/960w/35VYJ0NK0V.jpg');  
+.slide-two::before{
+      content: "";
+      background-image: url('https://snap-photos.s3.amazonaws.com/img-thumbs/960w/35VYJ0NK0V.jpg'); 
+      opacity: 0.5;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      position: absolute;
+      z-index: -1;
 }
 
 
-
-.slide-two{
-    background-image: url('https://images.unsplash.com/photo-1432821596592-e2c18b78144f?crop=entropy&fit=crop&fm=jpg&h=750&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1175');
+.slide-one::before{
+      content: "";
+      background-image: url('https://images.unsplash.com/photo-1432821596592-e2c18b78144f?crop=entropy&fit=crop&fm=jpg&h=750&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1175'); 
+      opacity: 0.5;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      position: absolute;
+      z-index: -1;
 }
     
 [id^="slider"]:checked + section {
     z-index: 100;
     left: 0;
-}    
-
+}
+  
+[id^="slider"]:checked + section::before{
+    opacity: 1;
+    transition: opacity 3s ease-out;
+}
 
 .slide :not(img){
     display: none;
@@ -128,7 +190,21 @@ nav ul{
 
 .slide img{
     opacity: .6;
-    width: 150px;
-    height: 128px;
+    width: 220px;
+    height: 148px;
     margin: 2em auto;
+    
 }
+
+/******************************
+        
+******************************/
+
+.choose img {
+    max-width: 90%;
+}
+
+
+/******************************
+    
+******************************/
