--- a/my-first-webpage/css/style.css
+++ b/my-first-webpage/css/style.css
@@ -20,6 +20,9 @@ a{
     text-decoration: none;
 }
 
+img {
+    max-width: 90%;
+}
 /*********** HEADER STYLES ************/
 
 header{
@@ -30,7 +33,7 @@ header{
     justify-content: center;
     flex-wrap: wrap-reverse;
     align-content: center;
-    padding: 1rem .3rem;
+    padding: 1.2rem .3rem 1.8rem;
 }
 
 nav ul{
@@ -41,6 +44,8 @@ nav ul{
     line-height: .5;
     text-align: center;
     width: 100%;
+    max-width: 280px;
+    margin: .8rem auto;
 }
 
 .name a{
@@ -65,7 +70,7 @@ nav ul{
 #navSelect{
     width: 100%;
     color: #5a5a5a;
-    padding: .48rem;
+    padding: .4rem .2rem;
     border: 0;
     background: transparent;
     line-height: 1;
@@ -74,11 +79,12 @@ nav ul{
  
 .select_container{
     width: 90%;
-    height: 2%;
+    max-width: 280px;
+    height: 1.3%;
     margin: 1rem auto;
    background: url('../svg/caret5.svg') no-repeat right #fff;
     background-size: 10px 10px;
-    background-position: 98% 50%;
+    background-position: 96% 50%;
 }
 
 #navSelect:focus{
@@ -87,8 +93,9 @@ nav ul{
     outline: none;
 }
 
-/************ SLIDER ************/
-
+/******************************
+            SLIDER 
+******************************/
 #slide-Panel{
     width: 100%;
     height: 40%;
@@ -115,15 +122,12 @@ nav ul{
     padding: 2em 2em;
     color: white;
     font-size: 1em;
-} 
-
-.slide::before{
+    transition: left 0s .75s;
     background: #fff;
     background-repeat: no-repeat;
     background-position:50% 50%;
     background-size: cover;
-}
-
+} 
 
 .slide a {
     background: #0FCABF;
@@ -149,41 +153,21 @@ nav ul{
   margin-left: .4rem;
 }
 
-.slide-two::before{
-      content: "";
-      background-image: url('https://snap-photos.s3.amazonaws.com/img-thumbs/960w/35VYJ0NK0V.jpg'); 
-      opacity: 0.5;
-      top: 0;
-      left: 0;
-      bottom: 0;
-      right: 0;
-      position: absolute;
-      z-index: -1;
+.slide-two{
+    background-image: url('https://snap-photos.s3.amazonaws.com/img-thumbs/960w/35VYJ0NK0V.jpg'); 
 }
 
 
-.slide-one::before{
-      content: "";
-      background-image: url('https://images.unsplash.com/photo-1432821596592-e2c18b78144f?crop=entropy&fit=crop&fm=jpg&h=750&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1175'); 
-      opacity: 0.5;
-      top: 0;
-      left: 0;
-      bottom: 0;
-      right: 0;
-      position: absolute;
-      z-index: -1;
+.slide-one{
+        background-image: url('https://images.unsplash.com/photo-1432821596592-e2c18b78144f?crop=entropy&fit=crop&fm=jpg&h=750&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1175'); 
 }
     
+
 [id^="slider"]:checked + section {
     z-index: 100;
     left: 0;
+    transition: left .65s ease-out;
 }
-  
-[id^="slider"]:checked + section::before{
-    opacity: 1;
-    transition: opacity 3s ease-out;
-}
-
 .slide :not(img){
     display: none;
 }
@@ -197,12 +181,14 @@ nav ul{
 }
 
 /******************************
-        
+        info styles
 ******************************/
 
-.choose img {
-    max-width: 90%;
-}
+.info h1 {
+    
+}    
+
+
 
 
 /******************************
